# trace-decoder

./: .gitignore  LICENSE  README.md  default.nix  stack.yaml  trace-decoder.cabal
.github/workflows/: deploy.yml
src/: Main.hs  Opts.hs  Protocol.hs  Util.hs
