name:                trace-decoder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mryndzionek/trace-decoder#readme
license:             BSD3
license-file:        LICENSE
author:              Ryndzionek Mariusz
maintainer:          mryndzionek@gmail.com
copyright:           2019 Ryndzionek Mariusz
category:            Control, Concurrency, Streaming, Reactivity, Hardware
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable trace-decoder
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -g
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring, binary, vector,
                       serialport, process, monad-loops, streamly, mtl,
                       listsafe, time, regex-compat, transformers
  other-modules:       Protocol
                       Util
                       Opts
